# MathMethods_opencv_Uni

./: CMakeLists.txt  Canny.cpp  Equslization.cpp  Gaussian.cpp  Lab10.cpp  Lab7.cpp  Lab8.cpp  README.txt  Thumbs.db  erosion_dilation6.cpp  header.h  main.cpp  sobel.cpp
